# human_detection

./: .env.example  README.md  pyproject.toml  settings.json
src/: config.py  ioc.py  main.py
src/database/: sqlite.py
src/repositories/: base.py  sqlite.py
src/routers/: camera.py  events.py  humans.py
src/schemas/: filters.py  schemas.py
src/services/: human_detection.py  photos.py
src/static/: index.html
